--- a/sports_network/pubspec.yaml
+++ b/sports_network/pubspec.yaml
@@ -32,8 +32,13 @@ dependencies:
   flutter:
     sdk: flutter
   firebase_auth: ^4.4.0
+  provider: ^6.0.5
   firebase_core: ^2.9.0
   cloud_firestore: ^4.3.1
+  image_picker: ^0.8.6
+  firebase_storage: ^11.0.10
+  async: ^2.9.0
+  masked_text: ^1.1.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
