--- a/sports_network/pubspec.yaml
+++ b/sports_network/pubspec.yaml
@@ -47,6 +47,8 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  test: ^1.17.1
+  mocktail: ^0.1.2
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
