--- a/sports_network/pubspec.yaml
+++ b/sports_network/pubspec.yaml
@@ -38,7 +38,8 @@ dependencies:
   image_picker: ^0.8.6
   firebase_storage: ^11.0.10
   async: ^2.9.0
-  masked_text: ^1.1.2
+  fl_country_code_picker: ^0.1.2
+  http: ^0.13.5
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
