--- a/sports_network/android/app/src/main/AndroidManifest.xml
+++ b/sports_network/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.brilloconnetz.sports_network">
    <application
+        android:requestLegacyExternalStorage="true"
         android:label="sports_network"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
