--- a/sports_network/pubspec.yaml
+++ b/sports_network/pubspec.yaml
@@ -40,6 +40,14 @@ dependencies:
   async: ^2.9.0
   fl_country_code_picker: ^0.1.2
   http: ^0.13.5
+  firebase_auth_mocks: ^0.9.3
+  firebase_storage_mocks: ^0.6.1
+  fake_cloud_firestore: ^2.1.0
+  geolocator: ^9.0.2
+  geocoding: ^2.1.0
+  shared_preferences: ^2.0.15
+
+ 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -70,8 +78,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/CountryCodes.json
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
